--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,37 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <img src="/assets/icons/32x32.png" style="padding-right: 1em;">
-    <h1>SimpleCRM</h1>
-    <span class="menu-spacer"></span>
-    <div>
-      <a mat-button [routerLink]="'/accounts'"> Accounts </a>
-      <a mat-button [routerLink]="'/create-account'"> Create Account </a>
-      <a mat-button [routerLink]="'/contacts'"> Contacts </a>
-      <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
-      <a mat-button [routerLink]="'/activities'"> Activities </a>
-      <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
+<div class="navbar navbar-expand-lg bg-primary navbar-dark">
+  <!-- Logo -->
+  <img
+    src="/assets/icons/32x32.png"
+    alt="PhotoDeck"
+    width="60"
+    class="img-fluid navbar-brand"
+  />
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    </div>
-  </mat-toolbar-row>
-  </mat-toolbar>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" routerLink="/webImages" >From the Web</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/localImages">Personal Portfolio</a>
+      </li>
+    </ul>
+  </div>
+</div>
 
-  <app-gallery></app-gallery>
-
+<app-gallery></app-gallery>
 
 <router-outlet></router-outlet>
