--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -1,27 +1,34 @@
-.outer-grid {
+.row {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
 }
-.inner-grid {
+
+/* Create four equal columns that sits next to each other */
+.column {
   flex: 25%;
-  max-width: 40%;
+  max-width: 25%;
   padding: 0 4px;
 }
-.inner-grid img {
+
+.column img {
   margin-top: 8px;
+  vertical-align: middle;
   width: 100%;
-  padding: 10px;
 }
+
+/* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
-  .inner-grid {
-     flex: 50%;
-     max-width: 75%;
+  .column {
+    flex: 50%;
+    max-width: 50%;
   }
 }
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .inner-grid {
-     flex: 100%;
-     max-width: 100%;
+  .column {
+    flex: 100%;
+    max-width: 100%;
   }
 }
