--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters">
+<div id="imageContainer" class="row no-gutters">
   <div class="column" *ngFor="let image of images">
     <img class="w-100 img-float" [src]="image" />
   </div>
