--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="navbar navbar-expand-lg bg-primary navbar-dark">
-  <!-- Logo -->
   <img
     src="/assets/icons/32x32.png"
     alt="PhotoDeck"
@@ -23,7 +22,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item" [routerLinkActive]="['active']">
-        <a class="nav-link" routerLink="/webImages" >From the Web</a>
+        <a class="nav-link" routerLink="/webImages" >Random Images</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/localImages">Personal Portfolio</a>
