--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="navbar navbar-expand-lg bg-primary navbar-dark">
   <img
-    src="/assets/icons/32x32.png"
+    src="./assets/icons/32x32.png"
     alt="PhotoDeck"
     width="60"
     class="img-fluid navbar-brand"
